Split javax/jakarta handling for Repository