@@ -17,13 +17,14 @@ package de.acosix.alfresco.utility.core.repo.quartz2;
 
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
-import java.lang.reflect.Modifier;
 
 import org.quartz.Job;
 import org.quartz.JobExecutionContext;
 import org.quartz.JobExecutionException;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+
+import de.acosix.alfresco.utility.repo.job.GenericJob;
 
 /**
  * Instances of this job class merely serve the purpose of relaying a job execution to an alternative class instance whose API has been
@@ -52,9 +53,9 @@ public class InvocationRelayJob implements Job
         {
             try
             {
-                relay = ((Class<?>) relayClassCandidate).newInstance();
+                relay = ((Class<?>) relayClassCandidate).getDeclaredConstructor().newInstance();
             }
-            catch (InstantiationException | IllegalAccessException ignore)
+            catch (InstantiationException | NoSuchMethodException | InvocationTargetException | IllegalAccessException ignore)
             {
                 LOGGER.debug("Class {} cannot be instantiated using Class.newInstance()", relayClassCandidate);
             }
@@ -73,19 +74,12 @@ public class InvocationRelayJob implements Job
             LOGGER.debug("Value {} for {} is not a class", relayClassCandidate, RELAY_CLASS);
         }
 
-        if (relay == null || execute == null || Modifier.isStatic(execute.getModifiers()))
+        if (!(relay instanceof GenericJob))
         {
             throw new IllegalStateException("Invalid relay class value: " + relayClassCandidate);
         }
 
-        try
-        {
-            execute.invoke(relay, context);
-        }
-        catch (InvocationTargetException | IllegalAccessException ex)
-        {
-            throw new RuntimeException("Error invoking relay job class instance", ex);
-        }
+        ((GenericJob) relay).execute(context);
     }
 
 }
